iwlwifi/mld: only get tid after checking that it is a dataqos frame

Like we did for mvm, only get the tid after all the other checks are
done by the function in order to not trigger an assert.  Linux will
likely return a random value there which later is not used as the
driver does an early return.  In LinuxKPI we do check that the frame
assumptions hold up, which does not go so well for a random frame.

Sponsored by:	The FreeBSD Foundation
MFC after:	3 days
PR:		290808